# QuickLauncher

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  update_version.yml
main/: main.py  main.py.backup
