[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickLauncher"
version = "1.0.36"
description = "Windows任务栏快捷启动器"
authors = [
    {name = "laozi4vip", email = "laozi4vip@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["windows", "hotkey", "launcher", "shortcut"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
]
dependencies = [
    "wxpython",
    "psutil",
    "pywin32",
]

[project.urls]
Homepage = "https://github.com/laozi4vip/QuickLauncher"
Repository = "https://github.com/laozi4vip/QuickLauncher"
Issues = "https://github.com/laozi4vip/QuickLauncher/issues"

[project.scripts]
quicklauncher = "main:main"
